Weitere Bildstile für responsive Bildstil Header Slideshow, Formatierung View Header Slideshow, weiteres Feld für CSS-Klasse pro Slide.

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.paragraph.slideshow_image.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.paragraph.slideshow_image.default.yml
@@ -3,6 +3,7 @@ langcode: de
 status: true
 dependencies:
   config:
+    - field.field.paragraph.slideshow_image.field_gbl_css_class
     - field.field.paragraph.slideshow_image.field_sli_heading
     - field.field.paragraph.slideshow_image.field_sli_image
     - field.field.paragraph.slideshow_image.field_sli_link_heading
@@ -41,4 +42,5 @@ content:
     type: text_default
     region: content
 hidden:
+  field_gbl_css_class: true
   field_sli_link_heading: true
