--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.paragraph.slideshow_image.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.paragraph.slideshow_image.default.yml
@@ -3,6 +3,7 @@ langcode: de
 status: true
 dependencies:
   config:
+    - field.field.paragraph.slideshow_image.field_gbl_css_class
     - field.field.paragraph.slideshow_image.field_sli_heading
     - field.field.paragraph.slideshow_image.field_sli_image
     - field.field.paragraph.slideshow_image.field_sli_link_heading
@@ -18,6 +19,14 @@ targetEntityType: paragraph
 bundle: slideshow_image
 mode: default
 content:
+  field_gbl_css_class:
+    weight: 4
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_sli_heading:
     weight: 1
     settings:
