--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.header_par_slideshow.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.header_par_slideshow.yml
@@ -300,7 +300,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: ''
+          empty: "<div class=\"row\">\r\n       <div class=\"inner-container\">\r\n          <h3 class=\"slide-headline\">{{ field_sli_heading }}</h3>\r\n  </div>\r\n</div>"
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
