Max zu Kontakt-Formular-Empfängern hinzugefügt

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/contact.form.feedback.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/contact.form.feedback.yml
@@ -11,6 +11,7 @@ recipients:
   - lukahoffmann@aol.com
   - nils@familie-baum.net
   - h.schilling@kabelmail.de
+  - maxwall@outlook.com
 reply: ''
 weight: 0
 message: 'Ihre Nachricht wurde gesendet.'
