auch cache_page beim Export von backup_migrate leeren, Permissions für Kommentare

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/backup_migrate.backup_migrate_settings.standard_backup.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/backup_migrate.backup_migrate_settings.standard_backup.yml
@@ -27,6 +27,7 @@ config:
       cache_dynamic_page_cache: cache_dynamic_page_cache
       cache_entity: cache_entity
       cache_menu: cache_menu
+      cache_page: cache_page
       cache_render: cache_render
       cache_toolbar: cache_toolbar
       sessions: sessions
