--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.redakteur.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.redakteur.yml
@@ -21,6 +21,7 @@ permissions:
   - 'entityconnect add button'
   - 'entityconnect edit button'
   - 'override all published option'
+  - 'skip comment approval'
   - 'view any unpublished article content'
   - 'view any unpublished content'
   - 'view any unpublished page content'
