Config Export durch neue Webform Version

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.webform.anmeldung_als_vereinsmitglied.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.webform.anmeldung_als_vereinsmitglied.yml
@@ -1,59 +1,103 @@
-uuid: 9f711a8a-25c5-4229-86e0-b4e56a968e25
 langcode: de
 status: open
 dependencies: {  }
 open: null
 close: null
+weight: 0
 uid: 1
 template: false
+archive: false
 id: anmeldung_als_vereinsmitglied
 title: 'Anmeldung als Vereinsmitglied'
 description: ''
-elements: "vorname:\n  '#type': textfield\n  '#title': Vorname\n  '#required': true\nnachname:\n  '#type': textfield\n  '#title': Nachname\n  '#required': true\nbirth_date:\n  '#type': textfield\n  '#title': Geburtsdatum\n  '#size': '8'\n  '#required': true\ncountry_origin:\n  '#type': textfield\n  '#title': Nationalität\n  '#required': true\nbirth_location:\n  '#type': textfield\n  '#title': Geburtsort\n  '#required': true\nfide_id:\n  '#type': textfield\n  '#title': Fide-ID\n  '#description': 'Falls vorhanden'\nchildren_parent:\n  '#type': fieldset\n  '#title': 'Bei Kindern: Name des Erziehungsberechtigten'\n  parent_first_name:\n    '#type': textfield\n    '#title': Vorname\n  parent_last_name:\n    '#type': textfield\n    '#title': Nachname\nadress:\n  '#type': fieldset\n  '#title': Adresse\n  street_nr:\n    '#type': textfield\n    '#title': 'Straße / Hausnr.'\n    '#required': true\n  area_code_city:\n    '#type': container\n    '#align_items': center\n    area_code:\n      '#type': textfield\n      '#title': PLZ\n      '#size': '8'\n      '#required': true\n    city:\n      '#type': textfield\n      '#title': Ort\n      '#required': true\n  telephone:\n    '#type': textfield\n    '#title': Telefonnummer\n  email:\n    '#type': email\n    '#title': E-Mail-Adresse\n    '#required': true\n    '#required_error': 'Bitte geben Sie Ihre E-Mailadresse ein.'\npayment_data:\n  '#type': fieldset\n  '#title': Kontodaten\n  info_fees:\n    '#type': processed_text\n    '#text': \"<p>Der Jahresbeitrag kostet 120 Euro.<br />\\r\\nErmäßigung ist auf Antrag möglich.<br />\\r\\nDer SEPA-Einzug ist verpflichtend.<br />\\r\\n&nbsp;</p>\\r\\n\"\n    '#format': basic_html\n  iban:\n    '#type': textfield\n    '#title': IBAN\n    '#required': true\n  bic:\n    '#type': textfield\n    '#title': BIC\n    '#description': 'Falls Konto im Ausland'\n  bank_name:\n    '#type': textfield\n    '#title': 'Name des Kreditinstitutes'\n    '#required': true\n  name_account_owner:\n    '#type': textfield\n    '#title': 'Name des Kontoinhabers'\n    '#description': 'Falls abweichend vom Mitglied / Erziehungsberechtigten'\n  sepa_consent:\n    '#type': checkbox\n    '#title': 'Ich stimme hiermit dem SEPA-Einzug des Mitgliedsbeitrages zu'\n    '#required': true\nprivacy_notice:\n  '#type': processed_text\n  '#text': \"<p>Wir fragen Ihre persönliche Daten samt Geburtsdatum, Nationalität, Gebortsort und Fide-ID ab, um Sie beim Niedersächsischen Schachverband anmelden zu können. Ihre sonstigen Kontaktdaten benötigen wir, um Sie eindeutig identifizieren und gegebenenfalls kontaktieren zu können.</p>\\r\\n\\r\\n<p>Ihre Bankdaten fragen wir ab, da wir die Mitgliedsbeiträge grundsätzlich per SEPA-Bankinzug erheben.<br />\\r\\nWeitere Hinweise in unserer <a data-entity-type=\\\"node\\\" data-entity-uuid=\\\"17550b5d-3da7-4a52-96e8-beb8878510cc\\\" href=\\\"/node/368\\\">Datenschutzerklärung</a>.<br />\\r\\n&nbsp;</p>\\r\\n\"\n  '#format': basic_html\n"
+category: ''
+elements: "vorname:\n  '#type': textfield\n  '#title': Vorname\n  '#required': true\nnachname:\n  '#type': textfield\n  '#title': Nachname\n  '#required': true\nbirth_date:\n  '#type': textfield\n  '#title': Geburtsdatum\n  '#size': '8'\n  '#required': true\ncountry_origin:\n  '#type': textfield\n  '#title': Nationalität\n  '#required': true\nbirth_location:\n  '#type': textfield\n  '#title': Geburtsort\n  '#required': true\nfide_id:\n  '#type': textfield\n  '#title': Fide-ID\n  '#description': 'Falls vorhanden'\nchildren_parent:\n  '#type': fieldset\n  '#title': 'Bei Kindern: Name des Erziehungsberechtigten'\n  parent_first_name:\n    '#type': textfield\n    '#title': Vorname\n  parent_last_name:\n    '#type': textfield\n    '#title': Nachname\nadress:\n  '#type': fieldset\n  '#title': Adresse\n  street_nr:\n    '#type': textfield\n    '#title': 'Straße / Hausnr.'\n    '#required': true\n  area_code_city:\n    '#type': container\n    '#align_items': center\n    area_code:\n      '#type': textfield\n      '#title': PLZ\n      '#size': '8'\n      '#required': true\n    city:\n      '#type': textfield\n      '#title': Ort\n      '#required': true\n  telephone:\n    '#type': textfield\n    '#title': Telefonnummer\n  email:\n    '#type': email\n    '#title': E-Mail-Adresse\n    '#required': true\n    '#required_error': 'Bitte geben Sie Ihre E-Mailadresse ein.'\npayment_data:\n  '#type': fieldset\n  '#title': Kontodaten\n  info_fees:\n    '#type': processed_text\n    '#text': \"<p>Der Jahresbeitrag kostet 120 Euro.<br />\\r\\nErmäßigung ist auf Antrag möglich.<br />\\r\\nDer SEPA-Einzug ist verpflichtend.<br />\\r\\n&nbsp;</p>\\r\\n\"\n    '#format': basic_html\n  iban:\n    '#type': textfield\n    '#title': IBAN\n    '#required': true\n  bic:\n    '#type': textfield\n    '#title': BIC\n    '#description': 'Falls Konto im Ausland'\n  bank_name:\n    '#type': textfield\n    '#title': 'Name des Kreditinstitutes'\n    '#required': true\n  name_account_owner:\n    '#type': textfield\n    '#title': 'Name des Kontoinhabers'\n    '#description': 'Falls abweichend vom Mitglied / Erziehungsberechtigten'\n  sepa_consent:\n    '#type': checkbox\n    '#title': 'Ich stimme hiermit dem SEPA-Einzug des Mitgliedsbeitrages zu'\n    '#required': true\nprivacy_notice:\n  '#type': processed_text\n  '#text': \"<p>Wir fragen Ihre persönliche Daten samt Geburtsdatum, Nationalität, Gebortsort und Fide-ID ab, um Sie beim Niedersächsischen Schachverband anmelden zu können. Ihre sonstigen Kontaktdaten benötigen wir, um Sie eindeutig identifizieren und gegebenenfalls kontaktieren zu können.</p>\\r\\n\\r\\n<p>Ihre Bankdaten fragen wir ab, da wir die Mitgliedsbeiträge grundsätzlich per SEPA-Bankinzug erheben.<br />\\r\\nWeitere Hinweise in unserer <a data-entity-type=\\\"node\\\" data-entity-uuid=\\\"17550b5d-3da7-4a52-96e8-beb8878510cc\\\" href=\\\"/node/368\\\">Datenschutzerklärung</a>.<br />\\r\\n&nbsp;</p>\\r\\n\"\n  '#format': basic_html\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#submit__label': 'Anmeldung absenden'\n"
 css: ''
 javascript: ''
 settings:
+  ajax: false
+  ajax_scroll_top: form
+  ajax_progress_type: ''
+  ajax_effect: ''
+  ajax_speed: null
   page: true
   page_submit_path: ''
   page_confirm_path: ''
-  form_submit_label: 'Anmeldung absenden'
+  page_admin_theme: false
+  form_title: both
   form_submit_once: false
-  form_submit_attributes: {  }
   form_exception_message: ''
-  form_closed_message: ''
+  form_open_message: ''
+  form_close_message: ''
   form_previous_submissions: true
   form_confidential: false
   form_confidential_message: ''
+  form_remote_addr: true
+  form_convert_anonymous: false
   form_prepopulate: false
   form_prepopulate_source_entity: false
+  form_prepopulate_source_entity_required: false
+  form_prepopulate_source_entity_type: ''
+  form_reset: false
   form_disable_autocomplete: false
   form_novalidate: false
+  form_disable_inline_errors: false
+  form_required: false
   form_unsaved: false
   form_disable_back: false
+  form_submit_back: false
   form_autofocus: false
   form_details_toggle: false
+  form_access_denied: default
+  form_access_denied_title: ''
+  form_access_denied_message: ''
+  form_access_denied_attributes: {  }
+  form_file_limit: ''
+  submission_label: ''
+  submission_log: false
+  submission_views: {  }
+  submission_views_replace: {  }
+  submission_user_columns: {  }
+  submission_user_duplicate: false
+  submission_access_denied: default
+  submission_access_denied_title: ''
+  submission_access_denied_message: ''
+  submission_access_denied_attributes: {  }
+  submission_exception_message: ''
+  submission_locked_message: ''
+  submission_excluded_elements: {  }
+  submission_exclude_empty: false
+  submission_exclude_empty_checkbox: false
+  previous_submission_message: ''
+  previous_submissions_message: ''
+  autofill: false
+  autofill_message: ''
+  autofill_excluded_elements: {  }
   wizard_progress_bar: true
   wizard_progress_pages: false
   wizard_progress_percentage: false
-  wizard_next_button_label: ''
-  wizard_next_button_attributes: {  }
-  wizard_prev_button_label: ''
-  wizard_prev_button_attributes: {  }
+  wizard_progress_link: false
+  wizard_progress_states: false
   wizard_start_label: ''
-  wizard_complete: true
-  wizard_complete_label: ''
+  wizard_preview_link: false
+  wizard_confirmation: true
+  wizard_confirmation_label: ''
+  wizard_track: ''
   preview: 0
-  preview_next_button_label: ''
-  preview_next_button_attributes: {  }
-  preview_prev_button_label: ''
-  preview_prev_button_attributes: {  }
+  preview_label: ''
+  preview_title: ''
   preview_message: ''
-  draft: false
+  preview_attributes: {  }
+  preview_excluded_elements: {  }
+  preview_exclude_empty: true
+  preview_exclude_empty_checkbox: false
+  draft: none
+  draft_multiple: false
   draft_auto_save: false
-  draft_button_label: ''
-  draft_button_attributes: {  }
   draft_saved_message: ''
   draft_loaded_message: ''
+  draft_pending_single_message: ''
+  draft_pending_multiple_message: ''
   confirmation_type: page
   confirmation_title: ''
   confirmation_message: "<div id=\"AppleMailSignature\">Vielen Dank f&uuml;r deine Anmeldung. Deine Angaben werden nun gepr&uuml;ft. Ich freue mich, dich demn&auml;chst in unserem Verein pers&ouml;nlich zu begr&uuml;&szlig;en.<br />\r\n&nbsp;</div>\r\n\r\n<div id=\"AppleMailSignature\">Lukas Hoffmann</div>\r\n\r\n<div id=\"AppleMailSignature\">1. Vorsitzender HSK Lister Turm</div>"
@@ -62,16 +106,26 @@ settings:
   confirmation_back: true
   confirmation_back_label: ''
   confirmation_back_attributes: {  }
+  confirmation_exclude_query: false
+  confirmation_exclude_token: false
+  confirmation_update: false
   limit_total: null
+  limit_total_interval: null
   limit_total_message: ''
+  limit_total_unique: false
   limit_user: null
+  limit_user_interval: null
   limit_user_message: ''
+  limit_user_unique: false
+  entity_limit_total: null
+  entity_limit_total_interval: null
+  entity_limit_user: null
+  entity_limit_user_interval: null
   purge: none
   purge_days: null
-  entity_limit_total: null
-  entity_limit_user: null
   results_disabled: false
   results_disabled_ignore: false
+  token_view: false
   token_update: false
 access:
   create:
@@ -79,66 +133,124 @@ access:
       - anonymous
       - authenticated
     users: {  }
+    permissions: {  }
   view_any:
     roles: {  }
     users: {  }
+    permissions: {  }
   update_any:
     roles: {  }
     users: {  }
+    permissions: {  }
   delete_any:
     roles: {  }
     users: {  }
+    permissions: {  }
   purge_any:
     roles: {  }
     users: {  }
+    permissions: {  }
   view_own:
     roles: {  }
     users: {  }
+    permissions: {  }
   update_own:
     roles: {  }
     users: {  }
+    permissions: {  }
   delete_own:
     roles: {  }
     users: {  }
+    permissions: {  }
+  administer:
+    roles: {  }
+    users: {  }
+    permissions: {  }
+  test:
+    roles: {  }
+    users: {  }
+    permissions: {  }
+  configuration:
+    roles: {  }
+    users: {  }
+    permissions: {  }
 handlers:
   mail_treasurer:
     id: email
     label: 'E-Mail an Schatzmeister'
     handler_id: mail_treasurer
     status: true
+    conditions: {  }
     weight: 0
     settings:
+      states:
+        - completed
       to_mail: h.schilling@kabelmail.de
+      to_options: {  }
       cc_mail: 'thomas@rufzeichen-online.de, lukahoffmann@aol.com'
+      cc_options: {  }
       bcc_mail: ''
+      bcc_options: {  }
       from_mail: info@schachklub-hannover.de
-      from_name: default
+      from_options: {  }
+      from_name: _default
       subject: 'Anmeldung als Vereinsmitglied über die HSK Website [site:url]'
       body: "Es wurde eine Anmeldung als Vereinsmitglied über die HSK Website eingegeben.\n\nDatum der Eingabe: [webform_submission:created]\nHier geht es zu den eingegebenen Daten auf der Website: [webform_submission:original]\n\nEingegebene Daten: \n[webform_submission:values]\n"
       excluded_elements:
         iban: iban
         bic: bic
+      ignore_access: false
+      exclude_empty: true
+      exclude_empty_checkbox: false
+      exclude_attachments: false
       html: false
       attachments: false
+      twig: false
       debug: false
+      reply_to: ''
+      return_path: ''
+      sender_mail: ''
+      sender_name: ''
+      theme_name: ''
+      parameters: {  }
   bestaetigungsmail_an_ausfueller_des_formulars:
     id: email
     label: 'Bestätigungsmail an Ausfüller des Formulars'
     handler_id: bestaetigungsmail_an_ausfueller_des_formulars
     status: true
+    conditions: {  }
     weight: 1
     settings:
+      states:
+        - completed
       to_mail: '[webform_submission:values:email:raw]'
+      to_options: {  }
       cc_mail: ''
+      cc_options: {  }
       bcc_mail: ''
+      bcc_options: {  }
       from_mail: info@schachklub-hannover.de
-      from_name: default
+      from_options: {  }
+      from_name: _default
       subject: 'Deine Anmeldung als Vereinsmitglied beim HSK Lister Turm'
       body: "Hallo [webform_submission:values:vorname] [webform_submission:values:nachname],\r\n\r\nDu hast dich als Vereinsmitglied beim HSK Lister Turm angemeldet.\r\n\r\nDeine eingegebenen Daten:\r\n\r\n[webform_submission:values]\r\n\r\nDeine Kontoverbindung haben wir aus\r\nSicherheitsgründen in dieser Email ausgelassen.\r\n\r\n------------------------------------\r\nHSK Lister Turm e.V.\r\nLukas Hoffmann\r\nGeibelstr. 34\r\n30173 Hannover\r\n"
       excluded_elements:
         iban: iban
         bic: bic
         bank_name: bank_name
+      ignore_access: false
+      exclude_empty: true
+      exclude_empty_checkbox: false
+      exclude_attachments: false
       html: false
       attachments: false
+      twig: false
       debug: false
+      reply_to: ''
+      return_path: ''
+      sender_mail: ''
+      sender_name: ''
+      theme_name: ''
+      parameters: {  }
+variants: {  }
+uuid: 9f711a8a-25c5-4229-86e0-b4e56a968e25
