--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 #
 # Apache/PHP/Drupal settings:
 #
-#php_value memory_limit 512M
+php_value memory_limit 512M
 #php_flag log_errors on
 #php_value error_log "/www/htdocs/w011d8a0/php-error-log/hsk_errors.log"
 
