--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.webform.anmeldung_als_vereinsmitglied.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.webform.anmeldung_als_vereinsmitglied.yml
@@ -17,13 +17,9 @@ javascript: ''
 settings:
   ajax: false
   ajax_scroll_top: form
-  ajax_progress_type: ''
-  ajax_effect: ''
-  ajax_speed: null
   page: true
   page_submit_path: ''
   page_confirm_path: ''
-  page_admin_theme: false
   form_title: both
   form_submit_once: false
   form_exception_message: ''
@@ -77,7 +73,6 @@ settings:
   wizard_progress_pages: false
   wizard_progress_percentage: false
   wizard_progress_link: false
-  wizard_progress_states: false
   wizard_start_label: ''
   wizard_preview_link: false
   wizard_confirmation: true
@@ -91,13 +86,11 @@ settings:
   preview_excluded_elements: {  }
   preview_exclude_empty: true
   preview_exclude_empty_checkbox: false
-  draft: none
+  draft: '1'
   draft_multiple: false
   draft_auto_save: false
   draft_saved_message: ''
   draft_loaded_message: ''
-  draft_pending_single_message: ''
-  draft_pending_multiple_message: ''
   confirmation_type: page
   confirmation_title: ''
   confirmation_message: "<div id=\"AppleMailSignature\">Vielen Dank f&uuml;r deine Anmeldung. Deine Angaben werden nun gepr&uuml;ft. Ich freue mich, dich demn&auml;chst in unserem Verein pers&ouml;nlich zu begr&uuml;&szlig;en.<br />\r\n&nbsp;</div>\r\n\r\n<div id=\"AppleMailSignature\">Lukas Hoffmann</div>\r\n\r\n<div id=\"AppleMailSignature\">1. Vorsitzender HSK Lister Turm</div>"
@@ -108,7 +101,6 @@ settings:
   confirmation_back_attributes: {  }
   confirmation_exclude_query: false
   confirmation_exclude_token: false
-  confirmation_update: false
   limit_total: null
   limit_total_interval: null
   limit_total_message: ''
@@ -125,7 +117,6 @@ settings:
   purge_days: null
   results_disabled: false
   results_disabled_ignore: false
-  token_view: false
   token_update: false
 access:
   create:
@@ -202,7 +193,6 @@ handlers:
       ignore_access: false
       exclude_empty: true
       exclude_empty_checkbox: false
-      exclude_attachments: false
       html: false
       attachments: false
       twig: false
@@ -212,7 +202,6 @@ handlers:
       sender_mail: ''
       sender_name: ''
       theme_name: ''
-      parameters: {  }
   bestaetigungsmail_an_ausfueller_des_formulars:
     id: email
     label: 'Bestätigungsmail an Ausfüller des Formulars'
@@ -241,7 +230,6 @@ handlers:
       ignore_access: false
       exclude_empty: true
       exclude_empty_checkbox: false
-      exclude_attachments: false
       html: false
       attachments: false
       twig: false
@@ -251,6 +239,4 @@ handlers:
       sender_mail: ''
       sender_name: ''
       theme_name: ''
-      parameters: {  }
-variants: {  }
 uuid: 9f711a8a-25c5-4229-86e0-b4e56a968e25
