--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.settings.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.settings.yml
@@ -1,6 +1,10 @@
 settings:
   default_status: open
   default_page_base_path: form
+  default_ajax: false
+  default_ajax_effect: fade
+  default_ajax_speed: 500
+  default_ajax_progress_type: throbber
   default_form_open_message: 'This form has not yet been opened to submissions.'
   default_form_close_message: 'Sorry…This form is closed to new submissions.'
   default_form_exception_message: 'Dieses Webformular kann nicht angezeigt werden. Bitte kontaktieren Sie den Website-Administrator.'
@@ -32,6 +36,8 @@ settings:
   default_draft_button_label: 'Als Entwurf speichern'
   default_draft_saved_message: 'Einsendung zwischengespeichert. Sie können später dieses Formular mit den jetzt gesicherten Inhalten wieder aufrufen.'
   default_draft_loaded_message: 'Ein teilweise ausgefülltes Formular wurde gefunden. Bitte füllen Sie die restlichen Teile aus.'
+  default_draft_pending_single_message: 'You have a pending draft for this webform. <a href="#">Load your pending draft</a>.'
+  default_draft_pending_multiple_message: 'You have pending drafts for this webform. <a href="#">View your pending drafts</a>.'
   default_confirmation_message: 'Neue Eingabe zu [webform:title] hinzugefügt.'
   default_confirmation_back_label: 'Zurück zum Formular'
   default_submission_label: '[webform_submission:submitted-to]: Submission #[webform_submission:serial]'
@@ -79,6 +85,8 @@ assets:
   javascript: ''
 handler:
   excluded_handlers: {  }
+variant:
+  excluded_variants: {  }
 export:
   temp_directory: ''
   exporter: delimited
@@ -109,7 +117,11 @@ batch:
   default_batch_email_size: 500
 purge:
   cron_size: 100
+form:
+  filter_category: ''
+  filter_state: ''
 element:
+  machine_name_pattern: a-z0-9_
   empty_message: '{Empty}'
   allowed_tags: admin
   wrapper_classes: "container-inline clearfix\nform--inline clearfix\nmessages messages--error\nmessages messages--warning\nmessages messages--status\n"
@@ -121,14 +133,13 @@ element:
   default_empty_option: true
   default_empty_option_required: ''
   default_empty_option_optional: ''
-  default_icheck: ''
-  default_google_maps_api_key: ''
   default_algolia_places_app_id: ''
   default_algolia_places_api_key: ''
   excluded_elements:
     password: password
     password_confirm: password_confirm
-    webform_location_geocomplete: webform_location_geocomplete
+  default_icheck: ''
+  default_google_maps_api_key: ''
 html_editor:
   disabled: false
   element_format: null
@@ -169,7 +180,6 @@ ui:
   help_disabled: false
   dialog_disabled: false
   offcanvas_disabled: false
-  contribute_disabled: false
   promotions_disabled: false
   description_help: true
   html_editor_disabled: false
@@ -184,9 +194,6 @@ requirements:
   cdn: true
   bootstrap: true
   spam: true
-contribute:
-  account_type: user
-  account_id: null
 langcode: de
 third_party_settings:
   captcha:
