--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/node.type.webform.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/node.type.webform.yml
@@ -14,7 +14,7 @@ third_party_settings:
     parent: 'main:'
 _core:
   default_config_hash: e0BoXlrxD4xhZMqJm5A1gTUkmntzhvyhDNY-3Y4glyc
-name: Webform
+name: Form
 type: webform
 description: 'A basic page with a webform attached.'
 help: ''
