--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.article.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.article.default.yml
@@ -3,6 +3,7 @@ langcode: de
 status: true
 dependencies:
   config:
+    - core.entity_view_display.comment.comment.default
     - field.field.node.article.body
     - field.field.node.article.comment
     - field.field.node.article.field_gallery_above_body
@@ -14,6 +15,7 @@ dependencies:
     - image.style.inline_full_width
     - node.type.article
   module:
+    - comment
     - entity_reference_revisions
     - image
     - text
@@ -32,6 +34,15 @@ content:
     third_party_settings: {  }
     label: hidden
     region: content
+  comment:
+    type: comment_default
+    weight: 8
+    region: content
+    label: above
+    settings:
+      view_mode: default
+      pager_id: 0
+    third_party_settings: {  }
   field_gallery_above_body:
     type: entity_reference_revisions_entity_view
     weight: 2
@@ -90,5 +101,4 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
-  comment: true
   langcode: true
