--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
@@ -1,6 +1,7 @@
 module:
   admin_toolbar: 0
   admin_toolbar_tools: 0
+  allowed_formats: 0
   automated_cron: 0
   backup_migrate: 0
   better_exposed_filters: 0
@@ -32,6 +33,7 @@ module:
   field: 0
   field_group: 0
   field_ui: 0
+  field_validation: 0
   file: 0
   filter: 0
   glue: 0
