--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.maillog_overview.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.maillog_overview.yml
@@ -46,7 +46,7 @@ display:
         options:
           submit_button: Anwenden
           reset_button: false
-          reset_button_label: Zurücksetzen
+          reset_button_label: Reset
           exposed_sorts_label: 'Sortieren nach'
           expose_sort_order: true
           sort_asc_label: Aufsteigend
@@ -238,7 +238,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Subject
+          label: Titel
           exclude: false
           alter:
             alter_text: false
