--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.comment.comment.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.comment.comment.default.yml
@@ -22,7 +22,7 @@ content:
     third_party_settings: {  }
   comment_body:
     type: text_textarea
-    weight: 2
+    weight: 3
     settings:
       rows: 5
       placeholder: ''
@@ -38,5 +38,12 @@ content:
       include_locked: true
     third_party_settings: {  }
     region: content
-hidden:
-  subject: true
+  subject:
+    type: string_textfield
+    weight: 2
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+hidden: {  }
