--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.chefredakteur.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.chefredakteur.yml
@@ -14,6 +14,7 @@ permissions:
   - 'access in-place editing'
   - 'access toolbar'
   - 'access user profiles'
+  - 'administer comments'
   - 'administer nodes'
   - 'administer webform submission'
   - 'bypass node access'
